test/pass/test_require/require_depending.sest
import RequireDepended

module RequireDepending = struct

  val main(args) =
    print_debug(RequireDepended.hello())

end
